--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <section class="contact reveal" id="contact">
   <h3>Contact Me</h3>
   <p>Interested in working together or have a question? Let’s connect.</p>
-  <a href="mailto:example@email.com">Send Email</a>
+  <a href="mailto:smileosagiede128@gmail.com">Send Email</a>
 </section>
 
 <footer>
@@ -133,3 +133,4 @@
 <script src="smile.js"></script>
 </body>
 </html>
+
